// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Roles endpoint GET /roles returns expected roles given a fed admin 1`] = `
Array [
  Object {
    "id": 1102,
    "name": "eAPD Federal Admin",
  },
  Object {
    "id": 1106,
    "name": "eAPD State Admin",
  },
]
`;

exports[`Roles endpoint GET /roles returns expected roles given a state admin 1`] = `
Array [
  Object {
    "id": 1107,
    "name": "eAPD State Staff",
  },
  Object {
    "id": 1108,
    "name": "eAPD State Contractor",
  },
]
`;

exports[`Roles endpoint GET /roles returns expected roles given a system admin 1`] = `
Array [
  Object {
    "id": 1101,
    "name": "eAPD Admin",
  },
  Object {
    "id": 1102,
    "name": "eAPD Federal Admin",
  },
  Object {
    "id": 1106,
    "name": "eAPD State Admin",
  },
  Object {
    "id": 1107,
    "name": "eAPD State Staff",
  },
  Object {
    "id": 1108,
    "name": "eAPD State Contractor",
  },
  Object {
    "id": 1110,
    "name": "eAPD System Admin",
  },
]
`;
